@@ -570,7 +570,7 @@ void play_controller::do_init_side(const unsigned int team_index){
 		gui_->invalidate_all();
 	}
 
-	if (!recorder.is_skipping() && !skip_replay_){
+	if (!recorder.is_skipping() && !skip_replay_ && current_team.get_scroll_to_leader()){
 		gui_->scroll_to_leader(units_, player_number_,game_display::ONSCREEN,false);
 	}
 	loading_game_ = false;
