@@ -88,6 +88,8 @@ Version 1.9.0-svn:
    * Prototype support for [set_global_variable]
    * Prototype support for [get_global_variable]
    * Prototype support for [clear_global_variable]
+   * Added scroll_to_leader attribute to side tag.
+     Default value is 'yes' (bug #15921)
  * Miscellaneous and bug fixes:
    * Defaulted log level to warning again
    * New option to auto-set delay shroud update on game start
